--- a/root/assets/scss/_font.scss
+++ b/root/assets/scss/_font.scss
@@ -18,3 +18,24 @@
   src: local(HiraginoSans-W6);
   font-weight: bold;
 }
+
+// basefont
+$font-base:"Hiragino Sans","Hiragino Kaku Gothic ProN",YuGothic-M,YuGothic,"游ゴシック",sans-serif;
+
+// Google Fonts
+@import url('https://fonts.googleapis.com/css?family=Montserrat');
+// font-family: 'Montserrat', sans-serif;
+@import url(http://fonts.googleapis.com/earlyaccess/notosansjapanese.css);
+// font-family: 'Noto Sans Japanese',
+
+// Montserrat
+$font-montserrat:'Montserrat', sans-serif;
+
+// Noto Sans
+$font-montserrat:'Noto Sans Japanese';
+
+// FontAwesome
+@mixin fa($content) {
+  font-family: 'FontAwesome';
+  content: $content;
+}
