--- a/root/assets/scss/_base.scss
+++ b/root/assets/scss/_base.scss
@@ -1,9 +1,9 @@
 body {
-  -webkit-text-size-adjust: 100%;
-  font-family: "Hiragino Sans","Hiragino Kaku Gothic ProN",YuGothic-M,YuGothic,"游ゴシック",sans-serif;
-  font-size: 14px;
-  line-height: 1.7;
   color: #333;
+  font-size: 14px;
+  font-family: $font-base;
+  line-height: 1.7;
+  -webkit-text-size-adjust: 100%;
 }
 
 a {
